Fixed header position (Gap issue)

--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@ body{
     overflow-x: hidden;
     scroll-behavior: smooth;
 } 
-nav {
+nav{
     width: 100%;
     padding: 1rem 5%;
     background: rgba(255, 255, 255, 0.05);
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(15px);
-    margin-bottom: 2rem;
+    margin-bottom: rem;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -87,7 +87,8 @@ nav {
 }
 header {
     text-align: center;
-    padding: 2rem 5%;
+  
+    margin-bottom: 0;
 }
 footer {
     text-align: center;
